--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^5.1.0",
     "buffer-to-stream": "^1.0.0",
     "cloudinary": "^1.40.0",
+    "crypto-js": "^4.1.1",
     "nestjs-zod": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
