--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.3",
     "@nestjs/swagger": "^7.1.7",
     "@nestjs/throttler": "^4.2.1",
+    "@nestjs/websockets": "^10.2.3",
     "@prisma/client": "^5.1.0",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
@@ -39,8 +40,9 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/platform-express": "^10.1.3",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^10.1.3",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -51,12 +53,12 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
+    "jest": "^29.6.2",
     "prettier": "^2.8.8",
     "prisma": "^5.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
